# AttentionFuse

./: .gitignore  .mailmap  DESIGN.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt
attnfuse/: __init__.py  rope_utils.py
benchmarks/: ablation.py  ablation_plot.py  backward_bench.py  backward_config_sweep.py  bench_bert.py  bench_gpt2.py  bench_runner.py  blocksparse_bench.py  composition_bench.py  composition_plot.py  config_sweep.py  configs.py  dtype_comparison_plot.py  flex_bench.py  flex_ncu.py  gqa_bench.py  gqa_config_sweep.py  hf_llama_bench.py  hopper_rope_bench.py  hopper_rope_sweep.py  hopper_spike.py  hopper_spike_ncu.py  hopper_spike_scaling.py  hopper_spike_sweep.py  jit_compile_bench.py  kvcache_bench.py  make_figures.py  ncu_profile.py  roofline_plot.py  roofline_runner.py  rope_bench.py  run_dtype_sweep.sh
docs/: AttnFuse_paper.tex  AttnFuse_paper_v2.tex  AttnFuse_paper_v2_README.md  AttnFuse_update_memo.tex  design.md  final_report.tex  hw6_report.tex  manuscript_updates_h100.tex  measured_profiling_subsection.tex
examples/: bert_dense.py  causal_alibi.py  causal_rope.py  gpt2_causal.py  quickstart.ipynb  sliding_window.py
presentation/: AttnFuse_glossary.tex  AttnFuse_meeting_prep.tex  AttnFuse_slides.pptx  AttnFuse_speaker_notes.tex  build_slides.py
results/: ablation.csv  baselines.csv  baselines_bert.csv  baselines_gpt2.csv  eval.csv  eval_bf16.csv  eval_fp32.csv  hf_llama_bench.csv  jit_compile.csv  roofline.csv  rope_bench.csv
scripts/: H100_DEPLOY.md  run_baselines.sh  run_flex_ncu.sh  run_flex_ncu_discover.sh  (+7 more)
(+122 files in other folders)
